--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -21,12 +21,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/settings_default_sort"
+                android:text="@string/settings_list_default_sort"
                 android:textColor="@android:color/black"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
 
             <RadioGroup
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="10dp">
@@ -61,6 +61,41 @@
                     android:textColor="@color/light_black"
                     android:textSize="16sp" />
             </RadioGroup>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:text="@string/settings_list_other"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|start"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <CheckBox
+                    android:id="@+id/settings_list_no_update"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:buttonTint="@color/ijblue"
+                    android:contentDescription="@string/settings_list_other_no_update"
+                    android:onClick="setListNoUpdate" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:text="@string/settings_list_other_no_update"
+                    android:textColor="@color/light_black"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -195,7 +230,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:text="@string/settings_list"
+                android:text="@string/settings_media"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
@@ -207,12 +242,12 @@
                 android:padding="10dp">
 
                 <CheckBox
-                    android:id="@+id/settings_list_no_update"
+                    android:id="@+id/settings_media_in_gallery"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:buttonTint="@color/ijblue"
-                    android:contentDescription="@string/settings_list_no_update"
-                    android:onClick="setListNoUpdate" />
+                    android:contentDescription="@string/settings_media_in_gallery"
+                    android:onClick="setMediaInGallery" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -220,7 +255,7 @@
                     android:layout_weight="2"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
-                    android:text="@string/settings_list_no_update"
+                    android:text="@string/settings_media_in_gallery"
                     android:textColor="@color/light_black"
                     android:textSize="16sp" />
             </LinearLayout>
